<resources>
    <string name="app_name">social-auth-bootstrap</string>
    <string name="action_settings">Settings</string>
    <string name="tab_login">Login</string>
    <string name="tab_create_account">Create account</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_name">Name</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="message_please_wait">Please wait…</string>
    <string name="action_create_account">Create</string>
    <string name="action_login">Login</string>
    <string name="action_google_login">Login with Google</string>
    <string name="action_facebook_login">Login with Facebook</string>
    <string name="action_github_login">Login with Github</string>
    <string name="action_linkedin_login">Login with Linkedin</string>
    <string name="error_base">&lt;strong&gt;Error!&lt;/strong&gt;\u0020</string>
    <string name="success_base">&lt;strong&gt;Success!&lt;/strong&gt;\u0020</string>
    <string name="error_required_field">This field is required</string>
    <string name="error_invalid_email">Invalid email address format</string>
    <string name="error_short_password">Password must be at least 8 characters long</string>
    <string name="error_passwords_do_not_match">Passwords do not match</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="menu_nav_home">Home</string>
    <string name="menu_nav_user">User Profile</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="success_login_base">Success! Logged in as\u0020</string>
    <string name="success_account_deleted">Success! Account deleted successfully.</string>
    <string name="success_account_information_updated">Account information successfully updated.</string>
    <string name="success_password_changed">Password successfully changed.</string>
    <string name="success_account_unlinked">account successfully unlinked.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Vestibulum auctor enim nunc. Duis porttitor diam massa, facilisis vulputate ipsum
        malesuada non. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
        auctor enim nunc. Duis porttitor diam massa, facilisis vulputate ipsum malesuada non.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor enim nunc.
        Duis porttitor diam massa, facilisis vulputate ipsum malesuada non.</string>
    <string name="action_logout">Log out</string>
    <string name="warning_last_linked_account">Note that since this is your last linked
        account, you would not be able to log back into your account if you created your
        account via an external provider (such as Google), unless you change your password
        before logging out.</string>
    <string name="label_or">OR</string>
    <string name="label_basic_information">Basic Information</string>
    <string name="label_change_password">Change Password</string>
    <string name="label_linked_accounts">Linked Accounts</string>
    <string name="action_update">Update</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_delete_account">Delete Account</string>
    <string name="action_delete_linked_account">Delete Linked Account</string>
    <string name="label_no_accounts_linked">No accounts linked</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="label_warning">Warning!</string>
</resources>
