<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        android:id="@+id/root_view"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

    <LinearLayout
            android:id="@+id/content_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            >

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_tiny"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                >

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/spacing_small"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_basic_information"
                        android:layout_marginBottom="@dimen/spacing_tiny"
                        style="@style/textview_label"
                        />

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                    <EditText
                            android:id="@+id/edittext_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_name"
                            android:inputType="textCapWords"
                            android:theme="@style/edittext"
                            />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                    <EditText
                            android:id="@+id/edittext_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:theme="@style/edittext"
                            />

                </android.support.design.widget.TextInputLayout>

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_update"
                        android:layout_gravity="end"
                        android:textAllCaps="false"
                        style="@style/Widget.AppCompat.Button.Small"
                        android:textSize="@dimen/font_small"
                        android:id="@+id/button_update"/>


            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_tiny"
                android:layout_marginBottom="@dimen/spacing_tiny"
                android:layout_marginRight="@dimen/spacing_tiny"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                >

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/spacing_small"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_tiny"
                        android:text="@string/action_change_password"
                        style="@style/textview_label"/>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                    <EditText
                            android:id="@+id/edittext_new_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_new_password"
                            android:inputType="textPassword"
                            android:theme="@style/edittext"
                            />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                    <EditText
                            android:id="@+id/edittext_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_confirm_password"
                            android:inputType="textPassword"
                            android:theme="@style/edittext"
                            />

                </android.support.design.widget.TextInputLayout>

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_change_password"
                        android:textAllCaps="false"
                        style="@style/Widget.AppCompat.Button.Small"
                        android:textSize="@dimen/font_small"
                        android:layout_gravity="end"
                        android:id="@+id/button_change_password"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</FrameLayout>